# looplab-frontend

./: .env.sample  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  run-desktop.sh  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/categories/algorithms/: index.ts
src/categories/shared/: index.ts  interfaces.ts
src/components/: AdminProtectedRoute.tsx  Breadcrumbs.tsx  CTA.tsx  DesktopOnlyRoute.tsx  EmptyState.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  KeyboardShortcutsModal.tsx  LandingNarrative.tsx  Navbar.tsx  ProtectedRoute.tsx  ScrollToTop.tsx  SeeingTheoryBackground.tsx  StreakPreview.tsx  ThemeToggle.tsx  WaitlistModal.tsx
src/components/admin/: AICodeChat.tsx  AIPipelineChat.tsx  AdminLayout.tsx  (+9 more)
src/contexts/: AuthContext.tsx  OnboardingContext.tsx  ThemeContext.tsx
src/hooks/: useAntiCheating.ts  useAssessmentSession.ts  useCameraMonitor.ts  useMonacoAI.ts  useMonacoEditor.ts  useScrollRestoration.ts  useSmartNavigation.ts  useTutorSession.ts
src/pages/: AlgorithmProblemDetail.tsx  AlgorithmProblems.tsx  Auth.tsx  AuthCallback.tsx  Categories.tsx  CreateCustomScenario.tsx  Dashboard.tsx  DataSciencePipeline.tsx  DownloadApp.tsx  FinanceWorkspace.tsx  Index.tsx  LearningPaths.tsx  NotFound.tsx  PathDetail.tsx  Pricing.tsx  Profile.tsx  ProjectDetail.tsx  Projects.tsx  PublicProfile.tsx  PublicProjectDetail.tsx  Settings.tsx  Stats.tsx  Validation.tsx  Welcome.tsx  WelcomeSetup.tsx  Workspace.tsx
src/utils/: platform.ts
(+286 files in other folders)
