[package]
name = "looplab-desktop"
version = "1.0.0"
description = "LoopLab - Learn to code by building real projects"
authors = ["LoopLab Team"]
license = "MIT"
repository = "https://github.com/looplab/looplab-platform"
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "looplab_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-rc.17", features = [] }
tauri-plugin-log = "2.0.0-rc"

# Backend library for embedding
looplab_backend = { path = "../../backend" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
